# zero2prod

./: Cargo.toml  Dockerfile  configuration.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20220404174104_create_subscriptions_table.sql  20220627190821_add_status_to_subscriptions.sql  20220627191558_make_status_not_null_in_subscriptions.sql  20220627191827_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
