[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
claim = "0.5"
config = "0.11.0"
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
unicode-segmentation = "1"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde-aux = "3"

[dependencies.secrecy]
features = ["serde"]
version = "0.8"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
version = "0.5.7"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["registry", "env-filter"]
version = "0.3"

[dependencies.uuid]
features = ["v4"]
version = "0.8.1"

[dev-dependencies]
once_cell = "1"
quickcheck = "0.9.0"
quickcheck_macros = "0.9.1"
fake = "~2.3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"

[lib]
path = "src/lib.rs"
